--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-.alert {
+/* .alert {
   background-color: white;
   height: 30px;
   width: 30px;
@@ -35,7 +35,7 @@ code {
 
 .error-message {
   margin: 0;
-}
+} */
 
 .home-links {
   list-style: none;
@@ -48,18 +48,28 @@ code {
 #login-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  /* grid-template-rows: repeat(4, 1fr); */
+  grid-auto-rows: 1fr;
   justify-items: center;
 }
 
 #signup-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  /* grid-template-rows: repeat(4, 1fr); */
+  grid-auto-rows: 1fr;
   justify-items: center;
 }
 
 #settings-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  /* grid-template-rows: repeat(4, 1fr); */
+  grid-auto-rows: 1fr;
+  justify-items: center;
+}
+
+#artist-page-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
@@ -87,5 +97,8 @@ code {
 
 #temporary-link {
   grid-column: 1 / span 4;
+}
 
+.artist-div {
+  grid-column: 1 / span 4;
 }
