--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,7 +37,11 @@ code {
   margin: 0;
 } */
 
-.home-links {
+
+
+/* comment in here */
+
+/* .home-links {
   list-style: none;
   text-decoration: none;
   font-size: 25px; 
@@ -48,7 +52,7 @@ code {
 #login-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  /* grid-template-rows: repeat(4, 1fr); */
+
   grid-auto-rows: 1fr;
   justify-items: center;
 }
@@ -56,7 +60,7 @@ code {
 #signup-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  /* grid-template-rows: repeat(4, 1fr); */
+
   grid-auto-rows: 1fr;
   justify-items: center;
 }
@@ -64,7 +68,6 @@ code {
 #settings-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  /* grid-template-rows: repeat(4, 1fr); */
   grid-auto-rows: 1fr;
   justify-items: center;
 }
@@ -83,7 +86,11 @@ code {
 
 .form {
   grid-column: 1 / span 4;
-  /* margin: auto; */
+}
+
+.buttonInControls{
+  width:10px;
+  height:10px;
 }
 
 
@@ -91,14 +98,10 @@ code {
   padding: 2px;
 }
 
-/* #login-button-submit {
-  margin: auto;
-}  */
-
 #temporary-link {
   grid-column: 1 / span 4;
 }
 
 .artist-div {
   grid-column: 1 / span 4;
-}
+} */
