--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,18 @@ code {
     monospace;
 }
 
+.error-wrapper p {
+  color: red;
+  background-color: mistyrose;
+  border-radius: 6px;
+  display: flex;
+  padding: 8px;
+  align-items: center;
+  gap: 8px;
+  margin: 8px 0;
+}
+
+
 /* .alert {
   background-color: white;
   height: 30px;
