--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,9 +30,21 @@ code {
     display:flex;
     box-sizing:border-box;
     flex-direction: column;
-    border: 10px solid blue;
     height: 100vh;
     width: 100vw;
+}
+
+.ArtistPageContainer .titleZZZ{
+  display:flex;
+  box-sizing:border-box;
+  flex-direction: row;
+  background-color: #FFFFFF;
+  border: 10px solid #2838FF;
+  border-radius: 15%;
+  justify-content: center;
+  align-items: center;
+  height: 10vh;
+  width: 20vw;
 }
 
 .SignupContainer{
@@ -56,7 +68,7 @@ code {
 .TitleArtistPage{
   display:flex;
   box-sizing:border-box;
-  border: 10px solid green;
+
   background-color: #FF5151;
   justify-content: center;
   height: 15vh;
@@ -76,7 +88,7 @@ code {
 .ArtistPageContainerBottom{
   display:flex;
   box-sizing:border-box;
-  border: 10px solid forestgreen;
+ 
   justify-content: center;
   height: 15vh;
   width: 100vw;
@@ -87,7 +99,7 @@ code {
   display:flex;
   flex-direction: column;
   box-sizing:border-box;
-  border: 10px solid violet;
+
   background-color: #FF5151;
   justify-content: center;
   align-items: center;
@@ -141,8 +153,9 @@ code {
   width: 100vw;
 }
 
-.loginlogout .homelinkZZ{
+.loginlogout .homelinkZZ {
   display:flex;
+  text-decoration: none;
   box-sizing:border-box;
   flex-direction: column;
   border: 10px solid #2838FF;
@@ -152,6 +165,35 @@ code {
   align-items: center;
   height: 15vh;
   width: 15vw;
+}
+
+
+.loginlogout .homelinkZZ .homelinks{
+  display:flex;
+  list-style-type: none;
+  text-decoration: none;
+}
+
+.newDrawingCreate{
+  display:flex;
+  box-sizing:border-box;
+  background-color: #FF5151;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+
+.newDrawingCreate .newDrawingCreateForm{
+  display:flex;
+  box-sizing:border-box;
+  border: 10px solid #2838FF;
+  background-color: #FFFFFF;
+  justify-content: center;
+  align-items: center;
+  height: 20vh;
+  width: 100vw;
 }
 
 .loginYoTitleSketch{
@@ -206,7 +248,7 @@ code {
 .loginYoTitleSketch img{
   display:flex;
   box-sizing:border-box;
-  border: 10px solid blue;
+  border: 10px solid 2838FF;
   justify-content: center;
   align-items: center;
   height: 60vh;
@@ -321,25 +363,25 @@ code {
 .Donde{
   display:flex;
   box-sizing:border-box;
-  border: 10px solid red;
+  border: 10px solid rgb(189, 186, 186);
+  background-color: rgb(189, 186, 186);
   justify-content: end;
   align-items: center;
   width: 100vw;
   height: 5vh;
 }
 
-
-
 .CreateLayerContainer .CreateLayerForm{
   display:flex;
   box-sizing:border-box;
   flex-direction: row;
-
   justify-content: center;
   align-items: center;
-  height: 20vh;
-  width: 25vw;
+  height: 10vh;
+  width: 20vw;
 }
+
+
 
 
 
